WL#5185 Remove deprecated 5.1 features

This patch removes a set of options, syntax and variables
that was formerly deprecated in MySQL 5.1.

The specific regressions tests in the sys_vars suite
that tests the removed variables are also removed.

System options:
-------------------
--skip-thread-priority    removed
-l, --log[=name]          removed
--log-slow-queries[=name] removed 
--one-thread              removed
 --rpl-recovery-rank=#    was already removed

System variables:
------------------
sql_low_priority_updates  removed
sql_max_join_size         removed
sql_big_tables            removed
storage_engine            will be removed later
rpl_recovery_rank         was already removed
log                       removed
log_slow_queries          removed
have_csv                  removed
have_innodb               removed
have_ndbcluster           removed
have_partitioning         removed
table_cache               was already removed
engine_condition_pushdown removed

SQL:
-----------------
SLAVE START               removed
SLAVE STOP                removed
ONE_SHOT                  removed
SET OPTION                removed
FLUSH MASTER              was already removed
FLUSH SLAVE               was already removed
USING/TYPE before ON      will be removed later


Notes:
'storage_engine' was deprecated in 5.5, so it
can't be removed in this version.  It will be
removed two GA releases later.

The documentation on 'USING/TYPE before ON'
has been inconsistent, and there has not been
given a proper deprecation warning on the use
of the syntax. 

See also 
    Bug #57920 Inconsistency in syntax and 
                example for CREATE INDEX
    Bug #36140 Inconsistent synonymy of USING 
               and TYPE for index creation